--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -1,4 +1,3 @@
-aboutus.html
 <!DOCTYPE html>
 <html>
 <head>
@@ -69,13 +68,20 @@ aboutus.html
 </head>
 <body>
     <header>
+    <div class="logo" style="position:absolute; top:10px; left:20px;">
+        <a href="{{ url_for('home') }}">
+            <img src="{{ url_for('static', filename='logo.jpg') }}" width="150" height="82" alt="Logo">
+        </a>
+    </div>
         <h1>Travel Gear Custom</h1>
         <nav>
-            <a href="home.html">Home</a>
-            <a href="products.html">Products</a>
-            <a href="aboutus.html">About</a>
-            <a href="contactus.html">Contact</a>
-        </nav>
+  <a href="{{ url_for('home') }}">Home</a>
+  <a href="{{ url_for('products') }}">Products</a>
+  <a href="{{ url_for('aboutus') }}">About Us</a>
+  <a href="{{ url_for('contactus') }}">Contact Us</a>
+  <a href="{{ url_for('cart') }}">Cart</a>
+</nav>
+
     </header>
 
     <section>
@@ -94,15 +100,12 @@ aboutus.html
             </ul>
         </div>
 
-
         <div class="team">
             <div class="team-member">
-                <img src="ceo.jpeg" alt="CEO" class="team-member img">
-
+                <img src="{{ url_for('static', filename='ceo.jpg') }}" alt="CEO" class="team-member img">
                 <h4>Ray J Aledo</h4>
                 <p>Founder & CEO</p>
-
-
+            </div>
         </div>
     </section>
 
