--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -1,4 +1,3 @@
-contactus.html
 <!DOCTYPE html>
 <html>
 <head>
@@ -87,13 +86,20 @@ contactus.html
 </head>
 <body>
     <header>
+    <div class="logo" style="position:absolute; top:10px; left:20px;">
+        <a href="{{ url_for('home') }}">
+            <img src="{{ url_for('static', filename='logo.jpg') }}" width="150" height="82" alt="Logo">
+        </a>
+    </div>
         <h1>Travel Gear Custom</h1>
         <nav>
-            <a href="home.html">Home</a>
-            <a href="products.html">Products</a>
-            <a href="aboutus.html">About</a>
-            <a href="contactus.html">Contact</a>
-        </nav>
+  <a href="{{ url_for('home') }}">Home</a>
+  <a href="{{ url_for('products') }}">Products</a>
+  <a href="{{ url_for('aboutus') }}">About Us</a>
+  <a href="{{ url_for('contactus') }}">Contact Us</a>
+  <a href="{{ url_for('cart') }}">Cart</a>
+</nav>
+
     </header>
 
     <section>
