--- a/templates/login.html
+++ b/templates/login.html
@@ -12,10 +12,11 @@
 
 <div class="form-container">
   <form method="POST">
-    <input type="text" name="username" placeholder="Username" required>
-    <input type="password" name="password" placeholder="Password" required>
-    <button type="submit">Login</button>
-  </form>
+  <input type="text" name="username" placeholder="Username" required><br>
+  <input type="password" name="password" placeholder="Password" required><br>
+  <button type="submit">Login</button>
+</form>
+
   <p>Don't have an account? <a href="/signup">Sign Up</a></p>
 </div>
 </body>
