--- a/templates/signup.html
+++ b/templates/signup.html
@@ -12,10 +12,11 @@
 
 <div class="form-container">
   <form method="POST">
-    <input type="text" name="username" placeholder="Username" required>
-    <input type="password" name="password" placeholder="Password" required>
-    <button type="submit">Sign Up</button>
-  </form>
+  <input type="text" name="username" placeholder="Username" required><br>
+  <input type="password" name="password" placeholder="Password" required><br>
+  <button type="submit">Sign Up</button>
+</form>
+
   <p>Already have an account? <a href="/login">Login here</a>.</p>
 </div>
 </body>
