--- a/templates/home.html
+++ b/templates/home.html
@@ -164,7 +164,7 @@ nav a:hover {
 </section>
 
 <section class="features">
-    <h2>Why Choose Our Gear</h2>
+    <h2>Why Choose My Gear</h2>
     <div class="feature-box">
         <h3>Built to Last</h3>
         <p>Premium materials that withstand years of travel</p>
