--- a/templates/products.html
+++ b/templates/products.html
@@ -122,7 +122,7 @@ nav a:hover {
 </header>
 
 
-<h1 style="text-align:center;">Our Premium Travel Gear</h1>
+<h1 style="text-align:center;">My Premium Travel Gear</h1>
 
 <div class="product-container">
     <div class="product">
